--- a/biome.json
+++ b/biome.json
@@ -23,6 +23,7 @@
         "indentStyle": "space",
         "indentWidth": 4,
         "lineEnding": "lf",
+        "lineWidth": 120,
         "attributePosition": "multiline"
     },
     "css": {
