--- a/web/docs/tsconfig.json
+++ b/web/docs/tsconfig.json
@@ -7,12 +7,6 @@
             "@/*": ["./src/*"]
         }
     },
-    "include": [
-        "**/*.ts",
-        "**/*.tsx",
-        ".next/types/**/*.ts",
-        "next-env.d.ts",
-        "dist/types/**/*.ts"
-    ],
+    "include": ["**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next-env.d.ts", "dist/types/**/*.ts"],
     "exclude": ["node_modules"]
 }
