feat: Update API event and method types, improve documentation, and add generated types

--- a/biome.json
+++ b/biome.json
@@ -15,7 +15,8 @@
             "!build",
             "!package-lock.json",
             "!api_docs.json",
-            "!**/testdata"
+            "!**/testdata",
+            "!**/ws-client/generated.ts"
         ]
     },
     "formatter": {
