--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
         "docs:preview": "npm run preview --workspace=web/docs"
     },
     "devDependencies": {
-        "@types/react": "19.2.2",
-        "@types/react-dom": "19.2.2",
+        "@types/react": "19.2.9",
+        "@types/react-dom": "19.2.3",
+        "browserlist": "1.0.2",
         "typescript": "5.9.3"
     },
     "dependencies": {
-        "@biomejs/biome": "2.3.2",
-        "@tailwindcss/vite": "4.1.16",
-        "@types/node": "24.9.2",
-        "react": "19.2.0",
-        "react-dom": "19.2.0",
-        "tailwindcss": "4.1.16"
+        "@biomejs/biome": "2.3.11",
+        "@tailwindcss/vite": "4.1.18",
+        "@types/node": "25.0.9",
+        "react": "19.2.3",
+        "react-dom": "19.2.3",
+        "tailwindcss": "4.1.18",
+        "@tailwindcss/postcss": "4.1.18"
     }
 }
