refactor: enhance error handling in HTTP and WebSocket clients

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -3,5 +3,22 @@ linters:
   default: standard
   enable:
     - asciicheck
+    - bidichk
     - bodyclose
+    - containedctx
     - contextcheck
+    - copyloopvar
+    # - cyclop
+    - decorder
+    - dogsled
+    - dupl
+    - dupword
+    - durationcheck
+    - embeddedstructfieldcheck
+    # - err113
+    - errcheck
+    - errchkjson
+    - errname
+    - errorlint
+    - exhaustive
+    # - exhaustruct
