refactor: update WebApp initialization and enhance RPC method registration

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -22,3 +22,7 @@ linters:
     - errorlint
     - exhaustive
     # - exhaustruct
+    - exptostd
+    - fatcontext
+    - forcetypeassert
+    - funcorder
