refactor: update null type handling with constant definition for clarity

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -29,14 +29,10 @@ linters:
     - funlen
     - gocheckcompilerdirectives
     - gochecknoglobals
-# gochecknoinits
-# Checks that no init functions are present in Go code.
-# gochecksumtype
-# Run exhaustiveness checks on Go “sum types”.
-# gocognit
-# Computes and checks the cognitive complexity of functions.
-# goconst
-# Finds repeated strings that could be replaced by a constant.
+    - gochecknoinits
+    - gochecksumtype
+    - gocognit
+    - goconst
 # gocritic
 # Provides diagnostics that check for bugs, performance and style issues. Extensible without recompilation through dynamic rules. Dynamic rules are written declaratively with AST patterns, filters, report message and optional suggestion.
 # Autofix
