--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -40,158 +40,145 @@ linters:
     # - godox
     - goprintffuncname
     - gosec
+    - gosmopolitan
+    - govet
+    - grouper
+    - iface
+    - importas
+    - inamedparam
+    - ineffassign
+    - interfacebloat
+    - intrange
+    - iotamixing
+    - ireturn
+
+  # lll
+  # Reports long lines.
+  # loggercheck
+  # Checks key value pairs for common logger libraries (kitlog,klog,logr,slog,zap).
+  # maintidx
+  # Maintidx measures the maintainability index of each function.
+  # makezero
+  # Find slice declarations with non-zero initial length.
+  # mirror
+  # Reports wrong mirror patterns of bytes/strings usage.
+  # Autofix
+  # misspell
+  # Finds commonly misspelled English words.
+  # Autofix
+  # mnd
+  # An analyzer to detect magic numbers.
+  # modernize
+  # A suite of analyzers that suggest simplifications to Go code, using modern language and library features.
+  # musttag
+  # Enforce field tags in (un)marshaled structs.
+  # nakedret
+  # Checks that functions with naked returns are not longer than a maximum size (can be zero).
+  # Autofix
+  # nestif
+  # Reports deeply nested if statements.
+  # nilerr
+  # Find the code that returns nil even if it checks that the error is not nil.
+  # nilnesserr
+  # Reports constructs that checks for err != nil, but returns a different nil value error. Powered by nilness and nilerr.
+  # nilnil
+  # Checks that there is no simultaneous return of nil error and an invalid value.
+  # nlreturn
+  # Checks for a new line before return and branch statements to increase code clarity.
+  # Autofix
+  # noctx
+  # Detects function and method with missing usage of context.Context.
+  # noinlineerr
+  # Disallows inline error handling (if err := ...; err != nil {).
+  # nolintlint
+  # Reports ill-formed or insufficient nolint directives.
+  # Autofix
+  # nonamedreturns
+  # Reports all named returns.
+  # nosprintfhostport
+  # Checks for misuse of Sprintf to construct a host with port in a URL.
+  # paralleltest
+  # Detects missing usage of t.Parallel() method in your Go test.
+  # perfsprint
+  # Checks that fmt.Sprintf can be replaced with a faster alternative.
+  # Autofix
+  # prealloc
+  # Find slice declarations that could potentially be pre-allocated.
+  # predeclared
+  # Find code that shadows one of Go’s predeclared identifiers.
+  # promlinter
+  # Check Prometheus metrics naming via promlint.
+  # protogetter
+  # Reports direct reads from proto message fields when getters should be used.
+  # Autofix
+  # reassign
+  # Checks that package variables are not reassigned.
+  # recvcheck
+  # Checks for receiver type consistency.
+  # revive
+  # Fast, configurable, extensible, flexible, and beautiful linter for Go. Drop-in replacement of golint.
+  # Autofix
+  # rowserrcheck
+  # Checks whether Rows.Err of rows is checked successfully.
+  # sloglint
+  # Ensure consistent code style when using log/slog.
+  # Autofix
+  # spancheck
+  # Checks for mistakes with OpenTelemetry/Census spans.
+  # sqlclosecheck
+  # Checks that sql.Rows, sql.Stmt, sqlx.NamedStmt, pgx.Query are closed.
+  # staticcheck
+  # It’s the set of rules from staticcheck.
+  # Autofix
+  # tagalign
+  # Check that struct tags are well aligned.
+  # Autofix
+  # tagliatelle
+  # Checks the struct tags.
+  # testableexamples
+  # Linter checks if examples are testable (have an expected output).
+  # testifylint
+  # Checks usage of github.com/stretchr/testify.
+  # Autofix
+  # testpackage
+  # Linter that makes you use a separate _test package.
+  # thelper
+  # Thelper detects tests helpers which do not start with the t.Helper() method.
+  # tparallel
+  # Tparallel detects inappropriate usage of t.Parallel() method in your Go test codes.
+  # unconvert
+  # Remove unnecessary type conversions.
+  # unparam
+  # Reports unused function parameters.
+  # unqueryvet
+  # Detects SELECT * in SQL queries and SQL builders, preventing performance issues and encouraging explicit column selection.
+  # unused
+  # Checks Go code for unused constants, variables, functions and types.
+  # usestdlibvars
+  # A linter that detect the possibility to use variables/constants from the Go standard library.
+  # Autofix
+  # usetesting
+  # Reports uses of functions with replacement inside the testing package.
+  # Autofix
+  # varnamelen
+  # Checks that the length of a variable’s name matches its scope.
+  # wastedassign
+  # Finds wasted assignment statements.
+  # whitespace
+  # Whitespace is a linter that checks for unnecessary newlines at the start and end of functions, if, for, etc.
+  # Autofix
+  # wrapcheck
+  # Checks that errors returned from external packages are wrapped.
+  # wsl
+  # New major version. Use wsl_v5 instead.
+  # Deprecated since v2.2.0
+  # wsl_v5
+  # Add or remove empty lines.
+  # Autofix
+  # zerologlint
+  # Detects the wrong usage of zerolog that a user forgets to dispatch with Send or Msg.
+
   settings:
     gosec:
       excludes:
         - G304
-# gosmopolitan
-# Report certain i18n/l10n anti-patterns in your Go codebase.
-# govet
-# Vet examines Go source code and reports suspicious constructs. It is roughly the same as ‘go vet’ and uses its passes.
-# Autofix
-# grouper
-# Analyze expression groups.
-# iface
-# Detect the incorrect use of interfaces, helping developers avoid interface pollution.
-# Autofix
-# importas
-# Enforces consistent import aliases.
-# Autofix
-# inamedparam
-# Reports interfaces with unnamed method parameters.
-# ineffassign
-# Detects when assignments to existing variables are not used.
-# interfacebloat
-# A linter that checks the number of methods inside an interface.
-# intrange
-# Intrange is a linter to find places where for loops could make use of an integer range.
-# Autofix
-# iotamixing
-# Checks if iotas are being used in const blocks with other non-iota declarations.
-# ireturn
-# Accept Interfaces, Return Concrete Types.
-# lll
-# Reports long lines.
-# loggercheck
-# Checks key value pairs for common logger libraries (kitlog,klog,logr,slog,zap).
-# maintidx
-# Maintidx measures the maintainability index of each function.
-# makezero
-# Find slice declarations with non-zero initial length.
-# mirror
-# Reports wrong mirror patterns of bytes/strings usage.
-# Autofix
-# misspell
-# Finds commonly misspelled English words.
-# Autofix
-# mnd
-# An analyzer to detect magic numbers.
-# modernize
-# A suite of analyzers that suggest simplifications to Go code, using modern language and library features.
-# musttag
-# Enforce field tags in (un)marshaled structs.
-# nakedret
-# Checks that functions with naked returns are not longer than a maximum size (can be zero).
-# Autofix
-# nestif
-# Reports deeply nested if statements.
-# nilerr
-# Find the code that returns nil even if it checks that the error is not nil.
-# nilnesserr
-# Reports constructs that checks for err != nil, but returns a different nil value error. Powered by nilness and nilerr.
-# nilnil
-# Checks that there is no simultaneous return of nil error and an invalid value.
-# nlreturn
-# Checks for a new line before return and branch statements to increase code clarity.
-# Autofix
-# noctx
-# Detects function and method with missing usage of context.Context.
-# noinlineerr
-# Disallows inline error handling (if err := ...; err != nil {).
-# nolintlint
-# Reports ill-formed or insufficient nolint directives.
-# Autofix
-# nonamedreturns
-# Reports all named returns.
-# nosprintfhostport
-# Checks for misuse of Sprintf to construct a host with port in a URL.
-# paralleltest
-# Detects missing usage of t.Parallel() method in your Go test.
-# perfsprint
-# Checks that fmt.Sprintf can be replaced with a faster alternative.
-# Autofix
-# prealloc
-# Find slice declarations that could potentially be pre-allocated.
-# predeclared
-# Find code that shadows one of Go’s predeclared identifiers.
-# promlinter
-# Check Prometheus metrics naming via promlint.
-# protogetter
-# Reports direct reads from proto message fields when getters should be used.
-# Autofix
-# reassign
-# Checks that package variables are not reassigned.
-# recvcheck
-# Checks for receiver type consistency.
-# revive
-# Fast, configurable, extensible, flexible, and beautiful linter for Go. Drop-in replacement of golint.
-# Autofix
-# rowserrcheck
-# Checks whether Rows.Err of rows is checked successfully.
-# sloglint
-# Ensure consistent code style when using log/slog.
-# Autofix
-# spancheck
-# Checks for mistakes with OpenTelemetry/Census spans.
-# sqlclosecheck
-# Checks that sql.Rows, sql.Stmt, sqlx.NamedStmt, pgx.Query are closed.
-# staticcheck
-# It’s the set of rules from staticcheck.
-# Autofix
-# tagalign
-# Check that struct tags are well aligned.
-# Autofix
-# tagliatelle
-# Checks the struct tags.
-# testableexamples
-# Linter checks if examples are testable (have an expected output).
-# testifylint
-# Checks usage of github.com/stretchr/testify.
-# Autofix
-# testpackage
-# Linter that makes you use a separate _test package.
-# thelper
-# Thelper detects tests helpers which do not start with the t.Helper() method.
-# tparallel
-# Tparallel detects inappropriate usage of t.Parallel() method in your Go test codes.
-# unconvert
-# Remove unnecessary type conversions.
-# unparam
-# Reports unused function parameters.
-# unqueryvet
-# Detects SELECT * in SQL queries and SQL builders, preventing performance issues and encouraging explicit column selection.
-# unused
-# Checks Go code for unused constants, variables, functions and types.
-# usestdlibvars
-# A linter that detect the possibility to use variables/constants from the Go standard library.
-# Autofix
-# usetesting
-# Reports uses of functions with replacement inside the testing package.
-# Autofix
-# varnamelen
-# Checks that the length of a variable’s name matches its scope.
-# wastedassign
-# Finds wasted assignment statements.
-# whitespace
-# Whitespace is a linter that checks for unnecessary newlines at the start and end of functions, if, for, etc.
-# Autofix
-# wrapcheck
-# Checks that errors returned from external packages are wrapped.
-# wsl
-# New major version. Use wsl_v5 instead.
-# Deprecated since v2.2.0
-# wsl_v5
-# Add or remove empty lines.
-# Autofix
-# zerologlint
-# Detects the wrong usage of zerolog that a user forgets to dispatch with Send or Msg.
