--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -73,75 +73,32 @@ linters:
     - perfsprint
     - prealloc
     - predeclared
-  # promlinter
-  # Check Prometheus metrics naming via promlint.
-  # protogetter
-  # Reports direct reads from proto message fields when getters should be used.
-  # Autofix
-  # reassign
-  # Checks that package variables are not reassigned.
-  # recvcheck
-  # Checks for receiver type consistency.
-  # revive
-  # Fast, configurable, extensible, flexible, and beautiful linter for Go. Drop-in replacement of golint.
-  # Autofix
-  # rowserrcheck
-  # Checks whether Rows.Err of rows is checked successfully.
-  # sloglint
-  # Ensure consistent code style when using log/slog.
-  # Autofix
-  # spancheck
-  # Checks for mistakes with OpenTelemetry/Census spans.
-  # sqlclosecheck
-  # Checks that sql.Rows, sql.Stmt, sqlx.NamedStmt, pgx.Query are closed.
-  # staticcheck
-  # It’s the set of rules from staticcheck.
-  # Autofix
-  # tagalign
-  # Check that struct tags are well aligned.
-  # Autofix
-  # tagliatelle
-  # Checks the struct tags.
-  # testableexamples
-  # Linter checks if examples are testable (have an expected output).
-  # testifylint
-  # Checks usage of github.com/stretchr/testify.
-  # Autofix
-  # testpackage
-  # Linter that makes you use a separate _test package.
-  # thelper
-  # Thelper detects tests helpers which do not start with the t.Helper() method.
-  # tparallel
-  # Tparallel detects inappropriate usage of t.Parallel() method in your Go test codes.
-  # unconvert
-  # Remove unnecessary type conversions.
-  # unparam
-  # Reports unused function parameters.
-  # unqueryvet
-  # Detects SELECT * in SQL queries and SQL builders, preventing performance issues and encouraging explicit column selection.
-  # unused
-  # Checks Go code for unused constants, variables, functions and types.
-  # usestdlibvars
-  # A linter that detect the possibility to use variables/constants from the Go standard library.
-  # Autofix
-  # usetesting
-  # Reports uses of functions with replacement inside the testing package.
-  # Autofix
-  # varnamelen
-  # Checks that the length of a variable’s name matches its scope.
-  # wastedassign
-  # Finds wasted assignment statements.
-  # whitespace
-  # Whitespace is a linter that checks for unnecessary newlines at the start and end of functions, if, for, etc.
-  # Autofix
-  # wrapcheck
-  # Checks that errors returned from external packages are wrapped.
-  # wsl
-  # New major version. Use wsl_v5 instead.
-  # Deprecated since v2.2.0
-  # wsl_v5
-  # Add or remove empty lines.
-  # Autofix
+    - promlinter
+    - protogetter
+    - reassign
+    - recvcheck
+    # - revive
+    - rowserrcheck
+    - sloglint
+    - spancheck
+    - sqlclosecheck
+    - staticcheck
+    - tagalign
+    - tagliatelle
+    - testableexamples
+    - testifylint
+    - thelper
+    - tparallel
+    - unconvert
+    - unparam
+    - unqueryvet
+    - unused
+    - usestdlibvars
+    - usetesting
+    - wastedassign
+    - whitespace
+    # - wrapcheck
+    - wsl_v5
   # zerologlint
   # Detects the wrong usage of zerolog that a user forgets to dispatch with Send or Msg.
 
