--- a/test.yaml
+++ b/test.yaml
@@ -20,6 +20,11 @@ components:
                     description: Creation timestamp
                     format: date-time
                     type: string
+                url:
+                    description: URL to the user
+                    format: uri
+                    nullable: true
+                    type: string
                 userID:
                     description: ID of the created user
                     type: string
@@ -134,6 +139,7 @@ paths:
                                 example-1:
                                     value:
                                         createdAt: "2000-01-01T00:00:00Z"
+                                        url: https://localhost:8080/user
                                         userID: "123"
                             schema:
                                 $ref: '#/components/schemas/CreateUserResponse'
@@ -204,6 +210,7 @@ paths:
                                 example-1:
                                     value:
                                         createdAt: "2000-01-01T00:00:00Z"
+                                        url: null
                                         userID: "123"
                             schema:
                                 $ref: '#/components/schemas/CreateUserResponse'
