--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
     "version": "1.0.0",
     "private": true,
     "workspaces": [
-        "web/docs"
+        "web/docs",
+        "web/rest-docs"
     ],
     "scripts": {
         "fmt": "biome check --write",
         "docs:dev": "npm run dev --workspace=web/docs",
         "docs:build": "npm run build --workspace=web/docs",
-        "docs:preview": "npm run preview --workspace=web/docs"
+        "docs:preview": "npm run preview --workspace=web/docs",
+        "rest-docs:dev": "npm run dev --workspace=web/rest-docs",
+        "rest-docs:build": "npm run build --workspace=web/rest-docs",
+        "rest-docs:start": "npm run start --workspace=web/rest-docs"
     },
     "devDependencies": {
         "@types/react": "19.2.9",
