--- a/test.yaml
+++ b/test.yaml
@@ -152,7 +152,7 @@ paths:
                     description: Internal server error
             summary: Ping the server
             tags:
-                - core
+                - Core
     /team/{teamID}:
         get:
             deprecated: true
@@ -223,7 +223,7 @@ paths:
                     description: Internal server error
             summary: Get a team
             tags:
-                - team
+                - Team
 servers:
     - description: Local server
       url: http://localhost:8080
