--- a/biome.json
+++ b/biome.json
@@ -15,6 +15,7 @@
             "!build",
             "!package-lock.json",
             "!api_docs.json",
+            "!test.json",
             "!**/testdata",
             "!**/ws-client/generated.ts"
         ]
