--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -26,7 +26,7 @@ linters:
     - fatcontext
     - forcetypeassert
     - funcorder
-    - funlen
+    # - funlen
     - gocheckcompilerdirectives
     - gochecknoglobals
     - gochecknoinits
