feat: update linting directives and improve context key variable declarations

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -106,5 +106,8 @@ linters:
         - G304
     tagliatelle:
       case:
-        rules:
-          json: goCamel
+        extended-rules:
+          json:
+            case: goCamel
+            initialism-overrides:
+              MQTT: true
